# starfinder

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  example.py  main.py  pyproject.toml  viz.ipynb
.github/workflows/: CI.yml
spaceros/: README.md  run.sh
spaceros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
spaceros/install/startracker_ros/share/startracker_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
spaceros/startracker_ros/: package.xml  setup.cfg  setup.py
spaceros/startracker_ros/startracker_ros/: my_node.py  starfinder_publisher_node.py  starfinder_subscriber_node.py  video_publisher.py  video_subscriber.py
src/: constants.rs  coords.rs  fov.rs  lib.rs  main.rs  optimize.rs  parse_and_render.rs  parsing_utils.rs  render.cpp  render.rs  rendering.rs  star.rs  star_catalog.rs  types.rs
src/types/: args.rs  coords.rs  mod.rs  star.rs
starfinder/: __main__.py  example.py  main.py  tycho2.py  viz.py
starfinder-web/: Cargo.toml
starfinder-web/src/: main.rs
starfinder-web/static/: index.html
