[package]
name = "tycho2_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
image = "0.25.2"
pyo3 = "0.22.2"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tycho2_renderer"
crate-type = ["cdylib"]
