[package]
name = "starfinder"
version = "1.1.0"
edition = "2021"
license-file = "LICENSE"
description = "starfinder is a Rust & Python package that provides functionality to read, process, and render star data from the Tycho-2 catalog. It's built with Rust for performance and exposes a Python API for ease of use."
homepage = "https://github.com/djmango/starfinder"
repository = "https://github.com/djmango/starfinder"
readme = "README.md"
exclude = [
    "data/*",
    "images/*",
]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
image = "0.25.2"
nalgebra = "0.33.0"
pyo3 = "0.22.2"
serde = { version = "1.0.209", features = ["derive"] }
spec_math = "0.1.5"
thiserror = "1.0.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "starfinder"
crate-type = ["cdylib", "rlib"]
