[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "starfinder"
version = "1.1.0"
description = "Generate images of the sky w/ accurate stars for star sensor simulation"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
authors = [
  { name="Sulaiman Khan Ghori", email="sulaiman.ghori@outlook.com" },
  { name="Layton Miller", email="layton.r.miller@gmail.com" },
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/djmango/starfinder"
Issues = "https://github.com/djmango/starfinder/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
