[package]
name = "starfinder-web"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.3.1"
image = "0.25.2"
serde = { version = "1.0.210", features = ["derive"] }
shuttle-actix-web = "0.47.0"
shuttle-runtime = "0.47.0"
starfinder = "1.3.1"
# starfinder = { path = "../" }
tokio = "1.26.0"
tracing = "0.1.40"
